--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^16.11.7",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -34,5 +35,8 @@
       "yarn prettier --write",
       "yarn test --watchAll=false --findRelatedTests --bail"
     ]
+  },
+  "dependencies": {
+    "date-fns": "^2.25.0"
   }
 }
